name:                ipfs-api
version:             0.1.0.0
synopsis:            A client library for the IPFS API
description:         IPFS API via Haskell
homepage:            http://ipfs.io
license:             MIT
license-file:        LICENSE
author:              David A Roberts
maintainer:          d@vidr.cc
copyright:           2015, David A Roberts
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.IPFS,
                       Network.IPFS.API
  
  other-modules:       Network.IPFS.MerkleDAG,
                       Network.IPFS.MerkleDAG.PBLink,
                       Network.IPFS.MerkleDAG.PBNode,
                       Network.IPFS.UnixFS,
                       Network.IPFS.UnixFS.Data,
                       Network.IPFS.UnixFS.Data.DataType,
                       Network.IPFS.UnixFS.Metadata
  
  build-depends:       base >=4.7 && <4.9
                     , base58-bytestring >= 0.1.0 && < 0.2.0
                     , blaze-builder >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , http-conduit >= 2.1 && < 2.2
                     , http-types >= 0.8 && < 0.9
                     , protocol-buffers >= 2.1 && < 2.2
                     , protocol-buffers-descriptor >= 2.1 && < 2.2
                     , text >= 1.1 && < 1.3
                     , utf8-string >= 0.3 && < 1.1
  
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
